--- a/css/layout.css
+++ b/css/layout.css
@@ -789,8 +789,8 @@ call-to-action .button {
 
 #contact {
    background: #191919;
-   padding-top: 96px;
-   padding-bottom: 102px;
+   padding-top: 70px;
+   padding-bottom: 10px;
    color: #636363;
 }
 #contact .section-head { margin-bottom: 42px; }
@@ -806,16 +806,6 @@ call-to-action .button {
    margin-bottom: 6px;
 }
 #contact h1 span { display: none; }
-#contact h1:before {
-   font-family: 'FontAwesome';
-   content: "\f0e0";
-	padding-right: 10px;
-	font-size: 72px;
-   line-height: 72px;
-   text-align: left;
-   float: left;
-   color: #ebeeee;
-}
 
 #contact h4 {
    font: 16px/24px 'opensans-bold', sans-serif;
@@ -828,7 +818,19 @@ call-to-action .button {
 }
 #contact .header-col { padding-top: 6px; }
 
-
+#contact .social-links {
+   margin: 18px 0 30px 0;
+   padding: 0;
+   font-size: 40px;
+}
+#contact .social-links li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    margin-left: 42px;
+    color: #F06000;
+    text-align: center;
+}
 /* contact form */
 #contact form { margin-bottom: 30px; }
 #contact label {
@@ -858,6 +860,7 @@ call-to-action .button {
 	color: #fff;
 	background-color: #11ABB0;
 }
+
 #contact button.submit {
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -900,23 +903,23 @@ call-to-action .button {
    top: 17px;
 }
 
+.hcontact{
+  color: white;
+  text-align: center;
+  font-size: 45px;
+  padding-bottom: 40px;
+}
 
-/* Twitter Feed */
-#twitter {
-   margin-top: 12px;
-   padding: 0;
+.container {width:1100px;}
+.leftcol{width:80%; float: left;}
+.rightcol{width:20%; float:left;}
+@media(max-width: 400px){
+  .leftcol {width:300px; float:none; display:block; position:relative; text-align: center; padding-left: 110px; font-size: 25px;}
+  .rightcol {width:300px; float:none; display:block; position:relative; text-align: center; padding-left: 110px; font-size: 25px;}
 }
-#twitter li {
-   margin: 6px 0px 12px 0;
-   line-height: 30px;
-}
-#twitter li span {
-   display: block;
-}
-#twitter li b a {
-   font: 13px/36px 'opensans-regular', Sans-serif;
-   color: #474747 !important;
-   border: none;
+ul a.fa{
+  font-size: 25px;
+  text-align: center;
 }
 
 
