--- a/css/layout.css
+++ b/css/layout.css
@@ -269,7 +269,7 @@ ul#nav li.current a { color: #F06000; }
 #resume .info {
    font: 16px/24px 'librebaskerville-italic', serif;
    color: #6E7881;
-   margin-bottom: 18px;
+   margin-bottom: 8px;
    margin-top: 9px;
 }
 #resume .info span {
@@ -910,13 +910,6 @@ call-to-action .button {
   padding-bottom: 40px;
 }
 
-.container {width:1100px;}
-.leftcol{width:80%; float: left;}
-.rightcol{width:20%; float:left;}
-@media(max-width: 400px){
-  .leftcol {width:300px; float:none; display:block; position:relative; text-align: center; padding-left: 110px; font-size: 25px;}
-  .rightcol {width:300px; float:none; display:block; position:relative; text-align: center; padding-left: 110px; font-size: 25px;}
-}
 ul a.fa{
   font-size: 25px;
   text-align: center;
@@ -1007,3 +1000,42 @@ footer .social-links li:first-child { margin-left: 0; }
 }
 #go-top a:hover { background-color: #0F9095; }
 
+
+sup {font-size: small; vertical-align:super;}
+
+@media(min-width: 768px){
+  #p {text-align: justify;}
+  #rightcol {text-align: right}
+  #leftcol {text-align: left}
+  #testimonials {height: 500px !important;}
+}
+
+#testimonials {height: 1050px;}
+.company {text-align: left !important;}
+.info {text-align: left !important;}
+
+
+html, body{
+  width: 100%;
+  overflow-x:hidden;
+}
+
+@media(max-width: 510px){
+  body {max-width: 100% !important;}
+}
+
+mark {
+  background-color: #11ABB0;
+  color: black;
+}
+
+.scroll-wrapper {
+  -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+
+  /* important:  dimensions or positioning here! */
+}
+
+.scroll-wrapper iframe {
+  /* nada! */
+}
